api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\VITLIK\Desktop\time-app-START\time-app\kompose.exe convert -f .\docker-compose.pub.jenkins.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\VITLIK\Desktop\time-app-START\time-app\kompose.exe convert -f .\docker-compose.pub.jenkins.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: MYSQL_DB
              value: time_db
            - name: MYSQL_HOST
              value: mysql
            - name: MYSQL_PASSWORD
              value: password
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_USER
              value: root
          image: vitvizel/timeapp-jenkins-backend
          livenessProbe:
             exec:
               command:
               - cat
               - /app/README.md
             initialDelaySeconds: 5
             periodSeconds: 5
          name: api
          ports:
            - containerPort: 5000
          resources:
           limits:
               cpu: "1"
               memory: "200Mi"
           requests:
               cpu: "0.5"
               memory: "100Mi"
      restartPolicy: Always
status: {}
