mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\VITLIK\Desktop\time-app-START\time-app\kompose.exe convert -f .\docker-compose.pub.jenkins.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\VITLIK\Desktop\time-app-START\time-app\kompose.exe convert -f .\docker-compose.pub.jenkins.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: time_db
            - name: MYSQL_ROOT_PASSWORD
              value: password
          image: mysql
          name: mysql
          resources:
           limits:
               cpu: "1"
               memory: "500Mi"
           requests:
               cpu: "0.5"
               memory: "200Mi"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data-pub
      restartPolicy: Always
      volumes:
        - name: mysql-data-pub
          persistentVolumeClaim:
            claimName: mysql-data-pub
status: {}
