api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\VITLIK\Desktop\time-app-START\time-app\kompose.exe convert -f .\docker-compose.pub.jenkins.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "5555"
      port: 5555
      targetPort: 5000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
